--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Roboto:ital,wght@0,500;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Gothic&family=Roboto:ital,wght@0,500;1,100&display=swap');
 
 body,
 html {
@@ -95,9 +97,12 @@ body{
     }
 }
 .name__text{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Do Hyeon', sans-serif;
 }
 
+.sir{
+    font-family: 'Do Hyeon', sans-serif;
+}
 
 .bgImage{
     position: absolute;
